--- a/styles.css
+++ b/styles.css
@@ -15,21 +15,31 @@ img {
 form {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  column-gap: 20px;
+  padding: 30px;
   border: solid 1px black;
-  height: 500px;
+  height: 300px;
   width: auto;
 }
 
 fieldset {
-    border: none;
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+label {
+    display: block;
 }
 
 .column-one {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
+  align-items: center;
 }
 
 .column-two {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
+  align-items: center;
 }
