--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,12 @@ body {
 
 #container {
   display: flex;
-  gap: 50px;
+  gap: 20px;
 }
+
+/* .form-box {
+    width: 100vw;
+} */
 
 img {
   height: 100vh;
@@ -17,10 +21,11 @@ form {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 20px;
-  padding: 30px;
-  border: solid 1px black;
+  padding: 20px;
+  border: none;
   height: 300px;
   width: auto;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 fieldset {
@@ -33,6 +38,14 @@ label {
     display: block;
     font-size: .8rem;
     font-weight: 600;
+}
+
+input {
+    height: 30px;
+    width: 200px;
+    padding-left: 10px;
+    border-radius: 10px;
+    border: solid 3px green;
 }
 
 .column-one {
