--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,16 @@ body {
 img {
   height: 100vh;
   width: auto;
+  display: block;
+}
+
+.overlay {
+    height: 70px;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: black;
+    position: absolute;
 }
 
 form {
