--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,22 @@ body {
 }
 
 #container {
-  display: flex;
+  display: grid;
   gap: 20px;
+  grid-template-columns: 1fr 3fr;
 }
 
 /* .form-box {
     width: 100vw;
 } */
 
+.left-side {
+    width: 100%;
+}
+
 img {
   height: 100vh;
   width: auto;
-  display: block;
 }
 
 .overlay {
