--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,10 @@ body {
   grid-template-columns: 1fr 3fr;
 }
 
-/* .form-box {
-    width: 100vw;
-} */
-
 .left-side {
+    position: relative;
     width: 100%;
+    height: 100%;
 }
 
 img {
@@ -23,12 +21,24 @@ img {
 }
 
 .overlay {
-    height: 70px;
+    height: 150px;
     width: 100%;
     top: 0;
     left: 0;
-    background-color: black;
+    margin-top: 100px;
+    background-color: rgba(255, 0, 0, 0.2);
     position: absolute;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.overlay img {
+    height: 80px;
+    width: auto;
+    align-self: center;
+    opacity: 0.5;
 }
 
 form {
