--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,28 @@
 body {
   margin: 0;
-  font-family: "Roboto", sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Roboto", sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 #container {
   display: grid;
-  gap: 20px;
+  /* gap: 20px; */
   grid-template-columns: 1fr 3fr;
 }
 
 .left-side {
-    position: relative;
-    width: 100%;
-    height: 100%;
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .right-side {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: flex-start;
+  padding: 30px;
 }
 
 img {
@@ -27,36 +31,41 @@ img {
 }
 
 .overlay {
-    height: 150px;
-    width: 100%;
-    top: 0;
-    left: 0;
-    margin-top: 100px;
-    background-color: rgba(255, 0, 0, 0.3);
-    position: absolute;
+  height: 150px;
+  width: 100%;
+  top: 0;
+  left: 0;
+  margin-top: 100px;
+  background-color: rgba(255, 0, 0, 0.3);
+  position: absolute;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .overlay img {
-    height: 90px;
-    width: auto;
-    align-self: center;
-    opacity: 0.6;
+  height: 90px;
+  width: auto;
+  align-self: center;
+  opacity: 0.6;
 }
 
 form {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 20px;
+  column-gap: 50px;
   padding: 20px 40px;
   border: none;
   height: 300px;
   width: auto;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
+
+/* .form-box {
+    width: 100%;
+} */
 
 fieldset {
   border: none;
@@ -65,25 +74,25 @@ fieldset {
 }
 
 label {
-    display: block;
-    font-size: .8rem;
-    font-weight: 600;
+  display: block;
+  font-size: 0.8rem;
+  font-weight: 600;
 }
 
 input {
-    height: 30px;
-    width: 200px;
-    padding-left: 10px;
-    border: solid 2px darkred;
-    background-color: rgba(255, 0, 0, 0.1);
+  height: 30px;
+  width: 200px;
+  padding-left: 10px;
+  border: solid 2px darkred;
+  background-color: rgba(255, 0, 0, 0.1);
 }
 
 input:focus {
-    height: 30px;
-    width: 200px;
-    padding-left: 10px;
-    border: solid 2px darkred;
-    background-color: white;
+  height: 30px;
+  width: 200px;
+  padding-left: 10px;
+  border: solid 2px darkred;
+  background-color: white;
 }
 
 .column-one {
@@ -99,14 +108,22 @@ input:focus {
 }
 
 button {
-    padding: 24px 64px;
-    border: none;
-    border-radius: 20px;
-    font-size: 1.3rem;
-    font-weight: 600;
+  padding: 12px 24px;
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: 600;
+  background-color: darkred;
+  color: white;
+  cursor: pointer;
+  align-self: flex-start;
+}
+
+button:hover {
+  background-color: crimson;
 }
 
 a {
-    color: red;
-    font-weight: 500;
+  color: red;
+  font-weight: 500;
 }
